--- a/estilo.css
+++ b/estilo.css
@@ -13,10 +13,12 @@
     height: 150px;
 }
 
-body, header, section, footer {
-
-    font-family: Arial, Helvetica, sans-serif;
-
+body {
+    background-color: rgb(255, 255, 255);
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   
 }
 
 p {
